--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
