--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "second-semester-project",
+  "name": "github-repo",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.2.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -29,5 +29,17 @@
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "vite": "^3.2.0"
-  }
+  },
+  "description": "Alt_School Second semester project (GitHub Repo Clone)",
+  "main": "dist",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Philip-Nwabuwa/Alt-School-Exam-Project.git"
+  },
+  "author": "Nwabuwa Philip",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Philip-Nwabuwa/Alt-School-Exam-Project/issues"
+  },
+  "homepage": "https://github.com/Philip-Nwabuwa/Alt-School-Exam-Project#readme"
 }
